# Trillim

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  PROTOCOL.md  README.md  THIRD_PARTY_LICENSES  pyproject.toml
docs/: about-trillim.md  advanced.md  benchmarks.md  chat.md  cli.md  components.md  install-linux.md  install-mac.md  install-windows.md  server.md
finetune/: finetune.ipynb  train.py
scripts/: build_wheels.py
src/trillim/: __init__.py  _app.py  _bin_path.py  _bundle_metadata.py  _model_store.py  _sampling.py  _timeouts.py  cli.py  engine.py  errors.py  inference.py  model_arch.py  model_store.py  quantize.py  runtime.py  server.py  token_utils.py  utils.py
src/trillim/components/: __init__.py
src/trillim/harnesses/: __init__.py  _base.py  _default.py  _search.py  _search_utils.py  base.py  (+1 more)
tests/: __init__.py  bin_path_test.py  cli_test.py  engine_test.py  inference_test.py  llm_chat_test.py  llm_component_test.py  llm_context_test.py  model_arch_test.py  prompt_cache_test.py  quantize_test.py  runtime_test.py  sampling_test.py  sdk_support_test.py  search_utils_test.py  server_live_suite.py  server_live_test.py  server_test.py  support.py  test_cli.py  test_errors.py  test_misc_runtime_server.py  test_package.py  test_runtime.py  test_server.py  tts_component_test.py  tts_sdk_test.py  tts_session_test.py  utils_test.py  whisper_sdk_test.py
tests/components/: __init__.py  test_components.py
tests/e2e/: test_app.py  test_serve.py
tests/harnesses/: test_base.py  test_default.py  test_init.py
tests/quantize/: __init__.py  test_config_manifest.py  test_entrypoint.py  test_output.py  test_quantize.py
tests/utils/: __init__.py  test_cancellation.py  test_exports.py  test_filesystem.py  test_ids.py  test_subprocesses.py
(+111 files in other folders)
