[project]
name = "trillim"
version = "0.1.0"
description = "The fastest inference framework to run BitNet models on CPUs"
readme = "README.md"
license = {file = "LICENSE"}
license-files = ["LICENSE", "THIRD_PARTY_LICENSES"]
authors = [{name = "Vineet V", email = "vineetv314@gmail.com"}]
keywords = ["bitnet", "inference", "cpu", "ternary", "llm", "1-bit"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "transformers==4.57.1",
    "huggingface_hub==0.36.0",
    "prompt-toolkit==3.0.52",
    "jinja2==3.1.0",
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "faster-whisper==1.2.1",
    "pocket-tts==1.0.3",
    "ruff==0.15.0",
    "accelerate==1.12.0",
    "torch==2.9.1",
]

[project.scripts]
trillim = "trillim.cli:main"

[project.urls]
Repository = "https://github.com/Vineet-Vinod/Trillim"
Issues = "https://github.com/Vineet-Vinod/Trillim/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trillim"]
exclude = ["src/trillim/_bin/**"]

[tool.hatch.build.targets.wheel.force-include]
"src/trillim/_bin" = "trillim/_bin"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
